[tool.poetry]
name = "llm-speed-benchmark"
version = "0.1.0"
description = ""
authors = ["Etienne <etienne.bolduc@optania.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.3.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
